fix: Make overflowing sidebar navigation scrollable

--- a/src/client/css/nav.css
+++ b/src/client/css/nav.css
@@ -19,6 +19,7 @@ nav.site-nav {
       #0000 97%
     )
     1;
+  overflow: scroll;
   z-index: 1;
 }
 
